# UZLMathLib

./: .gitignore  CMakeLists.txt  LICENSE.txt
benchmark/: CMakeLists.txt  benchmark_dwt_accuracy.cpp  benchmark_sofft_for.cpp  benchmark_sofft_for_efficiency.cpp  benchmark_sofft_for_speedup.cpp  benchmark_sofft_inv.cpp  benchmark_sofft_inv_efficiency.cpp  benchmark_sofft_inv_speedup.cpp  benchmark_soft_for.cpp  benchmark_soft_for_efficiency.cpp  benchmark_soft_for_speedup.cpp  benchmark_soft_inv.cpp  benchmark_soft_inv_efficiency.cpp  benchmark_soft_inv_speedup.cpp
cmake_aux/ConfigurationFiles/: compiler_config.hpp.in
cmake_aux/Modules/: UZLMATH_FindOpenBLAS.cmake
include/: uzlmath
include/uzlmath_headers/: access.hpp  array_dec.hpp  array_def.hpp  base_dec.hpp  base_def.hpp  compiler_config.hpp  complex_dec.hpp  complex_def.hpp  constants.hpp  cx_grid3D_dec.hpp  cx_grid3D_def.hpp  cx_matrix_dec.hpp  cx_matrix_def.hpp  cx_vector_dec.hpp  cx_vector_def.hpp  dsoft_fourier_coefficients.hpp  factorial.hpp  fn_cx_ntrt.hpp  fn_cx_sqrt.hpp  fn_dwt.hpp  fn_fft.hpp  fn_fliplr.hpp  fn_fliplr_matrix.hpp  fn_flipud.hpp  fn_fourier_transforms.hpp  fn_inv.hpp  fn_lu.hpp  fn_matrix_inv.hpp  fn_matrix_lu.hpp  fn_obj2file_grid3D.hpp  fn_obj2file_soft_coeff.hpp  fn_orthopoly.hpp  fn_rand_coeff.hpp  fn_rand_matrix.hpp  fn_rand_vector.hpp  fn_spharmonics.hpp  fn_spherical_harmonics.hpp  fn_wigner.hpp  forward_declarations.hpp  glob_vars.hpp  (+18 more)
sofft/: CMakeLists.txt  sofft_test.cpp  test.cpp
soft/: CMakeLists.txt  soft_test.cpp
src/: dsoft_fourier_coefficients.cpp  factorial.cpp  fn_dsoft.cpp  fn_dwt.cpp  fn_fourier_transforms.cpp  fn_idsoft.cpp  fn_obj2file_sofft_coeff.cpp  fn_orthopoly.cpp  fn_rand_coeff.cpp  fn_spharmonics.cpp  fn_spherical_harmonics.cpp  fn_wigner.cpp  soft_fourier_coefficients.cpp  stopwatch.cpp  wrapper.cpp
test/: CMakeLists.txt  MatrixTest.cpp  SampleTest.cpp
